[package]

name = "conduit-persistent"
version = "0.0.0"
authors = ["Jonathan Reem <jonathan.reem@gmail.com>"]

[[lib]]

name = "conduit-persistent"
path = "src/lib.rs"

[dependencies.conduit]

git = "https://github.com/conduit-rust/conduit.git"

[dependencies.conduit-middleware]

git = "https://github.com/conduit-rust/conduit-middleware.git"

